[project]
name = "stage-tracker"
version = "0.1.0"
description = "Lightweight complete run and individual stage tracker for modularized pipelines"
authors = [
  { name="Karim Ahmed", email="karim.ahmed4815@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

